lesson view display multiple sections

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -400,7 +400,7 @@
         </div>
         <!--Goals with no valid Favorite Goal Tags-->
         <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy" >
-          <ion-card *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkfavoritegoaltag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
+          <ion-card *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkgoalwithfavoritetag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
             <ion-card-content class="goal-content ion-no-padding">
               <!--<ion-badge color="darkgrey" class="goal-type">Goal</ion-badge>-->
               <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
@@ -439,29 +439,31 @@
         </div>
       </div>
       <div *ngIf="item === 10220"> <!--Learning-->
-        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists')" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'calendaritem', scheduleIds: scheduleIds })" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
           Keep it up Graphics
         </div>
-        <div *ngIf="!((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists')" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+        <div *ngIf="!((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'calendaritem', scheduleIds: scheduleIds })" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
           Relax Graphics
         </div>
         <ion-item lines="none">
-          <ion-label class="ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">Daily Goal</ion-label>
+          <ion-label [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">Daily Goal</ion-label>
         </ion-item>
         <!--Daily Goal Card-->
-        <ion-card *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists')" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
-          <ion-card-content class="goal-content ion-no-padding">
-            <ion-item class="calendar-item">
-              <div>
-                <div class="goal-todo-title ion-text-wrap">{{((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists').title}}</div>
-                <ion-note class="goal-todo-date">{{((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists').startDate | datetime: 'm:s,d:n'}}</ion-note>
-              </div>
-              <ion-icon class="lesson-item-checkbox" color="success" *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists').completed" name="checkmark-circle" slot="end"></ion-icon>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
+        <div *ngIf="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'calendaritem', scheduleIds: scheduleIds })">
+          <ion-card *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'todaycalendaritems', scheduleIds: scheduleIds })"  [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+            <ion-card-content class="goal-content ion-no-padding">
+              <ion-item class="calendar-item">
+                <div>
+                  <div class="goal-todo-title ion-text-wrap">{{calendarItem.title}}</div>
+                  <ion-note class="goal-todo-date">{{calendarItem.startDate | datetime: 'm:s,d:n'}}</ion-note>
+                </div>
+                <ion-icon class="lesson-item-checkbox" color="success" *ngIf="calendarItem.completed" name="checkmark-circle" slot="end"></ion-icon>
+              </ion-item>
+            </ion-card-content>
+          </ion-card>
+        </div>
         <!--Rest Card-->
-        <ion-card *ngIf="!((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists')" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
+        <ion-card *ngIf="!((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'calendaritem', scheduleIds: scheduleIds })" [ngStyle]="{'background': null | background : {} : 'color' }" mode="md">
           <ion-card-content class="goal-content ion-no-padding">
             <ion-item class="calendar-item">
               <div>
@@ -471,16 +473,16 @@
           </ion-card-content>
         </ion-card>
         <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
-          <div *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkfavoritegoaltag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })">
-            <!--<div>index {{((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}}</div>-->
+          <div *ngIf="goal[1] === 'goal'"> <!--Only Show non-favorite goals-->
+            <!--<div>index {{((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}}</div>-->
             <ion-item lines="none" class="ion-no-margin">
-              <ion-label class="ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">{{goal[5]}}</ion-label>
+              <ion-label [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">{{goal[5]}}</ion-label>
             </ion-item>
-            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true}"> <!--TODO: this property should work: initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists' : { output: 'index', scheduleIds: scheduleIds, goal: goal })-->
-              <ion-slide class="lesson-slide" *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'calendarItemIfTodayLessonExists' : { output: 'filteredCalendarItems', scheduleIds: scheduleIds, goal: goal }); trackBy: customTrackBy">
+            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true}"> <!--TODO: this property should work: initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })-->
+              <ion-slide class="lesson-slide" *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'filteredcalendaritems', scheduleIds: scheduleIds, goal: goal }); index as i; trackBy: customTrackBy">
                 <ion-card class="lesson-card" (click)="openContent($event, calendarItem)">
                   <ion-card-content class="ion-no-padding ion-padding-top">
-                    <div class="goal-todo-title">{{calendarItem.title}}</div>
+                    <div class="goal-todo-title">Day {{i+1}}</div>
                     <div>{{calendarItem.startDate | datetime: 'm:s,d:n'}}</div>
                     <ion-button (click)="touchCalendarItemResponse($event, calendarItem, 'check-in')" fill="clear">
                       <ion-icon class="lesson-item-checkbox" color="tertiary" *ngIf="!calendarItem.completed" name="radio-button-off"></ion-icon>
