--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -474,11 +474,10 @@
         </ion-card>
         <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
           <div *ngIf="goal[1] === 'goal'"> <!--Only Show non-favorite goals-->
-            <!--<div>index {{((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}}</div>-->
             <ion-item lines="none" class="ion-no-margin">
               <ion-label [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">{{goal[5]}}</ion-label>
             </ion-item>
-            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true}"> <!--TODO: this property should work: initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })-->
+            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto', initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}">
               <ion-slide class="lesson-slide" *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'filteredcalendaritems', scheduleIds: scheduleIds, goal: goal }); index as i; trackBy: customTrackBy">
                 <ion-card class="lesson-card" (click)="openContent($event, calendarItem)">
                   <ion-card-content class="ion-no-padding ion-padding-top">
@@ -627,7 +626,7 @@
         </div>
       </div>
       <div class="component" *ngIf="item === 10370"> <!--References-->
-        <ion-slides class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
+        <ion-slides class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto'}">
           <ion-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
             <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
               <ion-card-content class="ion-no-padding">
@@ -944,7 +943,7 @@
       <ion-item color="secondary" lines="none" class="section"> <!--Featured Section Header-->
         <ion-label color="dark" class="section-label">Featured</ion-label>
       </ion-item>
-      <ion-slides class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [options]="{grabCursor: true, updateOnWindowResize: true}">
+      <ion-slides class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto'}">
         <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy">
           <ion-card class="program-card" (click)="openProgram($event, program)">
             <ion-card-header class="ion-no-padding">
