--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -1039,6 +1039,13 @@ app-showfeature {
     margin: 0 3%;
   }
 
+  .lesson-title {
+    cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   .lesson-item-checkbox {
     width: 20px;
     margin: auto;
