improve slideshow by adding slidesOffsetAfter

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -477,7 +477,7 @@
             <ion-item lines="none" class="ion-no-margin">
               <ion-label [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">{{goal[5]}}</ion-label>
             </ion-item>
-            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto', initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}">
+            <ion-slides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 124, initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}">
               <ion-slide class="lesson-slide" *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'filteredcalendaritems', scheduleIds: scheduleIds, goal: goal }); index as i; trackBy: customTrackBy">
                 <ion-card class="lesson-card" (click)="openContent($event, calendarItem)">
                   <ion-card-content class="ion-no-padding ion-padding-top">
