audio plyr use plyrLoadedMetadata event listener instead of plyrCanPlay

--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -1024,6 +1024,10 @@ app-showfeature {
     padding-right: 12px;
   }
 
+  .learning-section {
+    background: var(--ion-color-lightgrey);
+  }
+
   .lesson-slides {
     padding: 12px;
   }
