--- a/src/app/pages/feature/success-popover/success-popover.page.html
+++ b/src/app/pages/feature/success-popover/success-popover.page.html
@@ -5,5 +5,10 @@
 </ion-header>
 
 <ion-content>
-<ion-label>Congratulations</ion-label>
+  <div style="text-align: center;">
+    <img src="/assets/img/success-popover.svg" />
+    <h3>WELL DONE</h3>
+    <p>You've successfully joined this plan.</p>
+    <ion-button>Got it</ion-button>
+  </div>
 </ion-content>
