--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -242,7 +242,7 @@
               <div class="program-name dark">Add</div>
             </ion-card>
           </ion-col>
-          <!--<ion-col class="ion-align-self-center" size="auto">
+          <ion-col class="ion-align-self-center" size="auto" *ngIf="userData.user && ['owner','admin','staff'].includes(userData.user.role)">
             <ion-card class="program-card" (click)="chooseContent({ _id: '5f08b9e831a2da27ef50bc78' })">
               <ion-card-header class="ion-no-padding" color="lightgrey">
                 <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -251,7 +251,7 @@
               </ion-card-header>
               <div class="program-name dark">Content Placeholder</div>
             </ion-card>
-          </ion-col>-->
+          </ion-col>
           <ion-col class="ion-align-self-center" *ngFor="let content of activities; index as i" size="auto" [hidden]="!((content.matrix_string[0][0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1 || content.resource['en-US'].value[0].toLowerCase().indexOf(searchKeyword.toLowerCase()) > -1))">
             <ion-card class="program-card" (click)="defaultContentAction($event, content)">
               <ion-card-header class="ion-no-padding">
@@ -261,9 +261,6 @@
               </ion-card-header>
               <div class="program-type"><ion-badge color="button1">{{content.resource['en-US'].value[0]}}</ion-badge></div>
               <div class="program-name light">{{content.matrix_string[0][0]}}</div>
-              <!--<ion-button class="info-moment ion-no-padding ion-no-margin" (click)="openChildActivity($event, content, 'edit')" fill="clear" size="small">
-                <ion-icon name="information-circle-outline" color="secondary"></ion-icon>
-              </ion-button>-->
             </ion-card>
           </ion-col>
         </ion-row>
@@ -314,6 +311,12 @@
           <ion-label class="ion-margin-left">Add to Admin's Timeline</ion-label>
           <ion-checkbox [(ngModel)]="schedule.array_boolean[3]"></ion-checkbox>
         </ion-item>
+        <!--Only Restvo admin sees this setting. Once enabled, this schedule is not shown to regular admin in the Curriculum view-->
+        <ion-item lines="none" *ngIf="userData.user && ['owner','admin','staff'].includes(userData.user.role)">
+          <ion-label class="ion-margin-left">Store Notes in this Schedule</ion-label>
+          <ion-checkbox [(ngModel)]="schedule.array_boolean[5]"></ion-checkbox>
+        </ion-item>
+
       </ion-item-group>
     </ion-list>
   </div>
