--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -328,7 +328,7 @@
                 </ion-button>
               </ion-item>
               <div *ngFor="let calendarItem of (adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems); trackBy: customTrackBy">
-                <ion-item class="calendar-item ion-no-padding" *ngIf="((calendarItem.status === section && !calendarItem.completed) || (!moment.matrix_number[i][0] && section === 'Current' && calendarItem.status === 'Upcoming' && !calendarItem.completed) || (section === 'Current' && calendarItem.status === 'Past' && !calendarItem.completed) || (section === 'Completed' && calendarItem.completed)) && (adminOrPublicAccessContentCalendars.length ? true : scheduleIds.includes(calendarItem.schedule)) && progressView === section" (click)="openContent($event, calendarItem)">
+                <ion-item class="calendar-item ion-no-padding" *ngIf="((calendarItem.status === section && !calendarItem.completed) || (!moment.matrix_number[i][0] && section === 'Current' && calendarItem.status === 'Upcoming' && !calendarItem.completed) || (section === 'Current' && calendarItem.status === 'Past' && !calendarItem.completed) || (section === 'Completed' && calendarItem.completed)) && scheduleIds.includes(calendarItem.schedule) && progressView === section" (click)="openContent($event, calendarItem)">
                   <ion-button (click)="touchCalendarItemResponse($event, calendarItem, 'check-in')" fill="clear">
                     <ion-icon class="calendar-item-checkbox" color="tertiary" *ngIf="!calendarItem.completed" name="radio-button-off"></ion-icon>
                     <ion-icon class="calendar-item-checkbox" color="tertiary" *ngIf="calendarItem.completed" name="checkmark-circle"></ion-icon>
@@ -958,23 +958,24 @@
     </div>
   </ion-list>
   <!--Space to create cushion for the Fab buttons-->
-  <div style="height: 50px" *ngIf="authService.token && (hasOrganizerAccess || hasLeaderAccess || hasParticipantAccess) && loadStatus && moment && moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(10210) && ((moment.array_boolean.length > 8) && moment.array_boolean[8] || customSchedule || (moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(12000)))"></div>
+  <div style="height: 50px" *ngIf="authService.token && (hasOrganizerAccess || hasLeaderAccess || hasParticipantAccess) && loadStatus && moment && moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(10210) && ((moment.array_boolean.length > 8) && moment.array_boolean[8] || notes_schedule || (moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(12000)))"></div>
 </ion-content>
-<ion-footer lines="none">
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="authService.token && (hasOrganizerAccess || hasLeaderAccess || hasParticipantAccess) && loadStatus && setupPermissionCompleted && moment && moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(10210) && ((moment.array_boolean.length > 8) && moment.array_boolean[8] || customSchedule || (moment.resource.matrix_number?.length && moment.resource.matrix_number[0].includes(12000)))" [hidden]="showPreview">
+<ion-footer>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" *ngIf="showFab" [hidden]="showPreview">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <!--create To-Do-->
-      <ion-fab-button (click)="createCalendarItem($event, (moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 3) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][3] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][17])" color="primary" *ngIf="customSchedule && (!moment.resource.matrix_number[0].includes(20020) || moment.resource.matrix_number[0].includes(20020) && tabSelection === moment.resource.matrix_number[3][moment.resource.matrix_number[0].indexOf(10210)])">{{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-fab-button>
-      <!--create Goal-->
-      <ion-fab-button (click)="promptNewGoalName($event)" color="primary" *ngIf="(moment.array_boolean.length > 8) && moment.array_boolean[8] && (!moment.resource.matrix_number[0].includes(20020) || moment.resource.matrix_number[0].includes(20020) && this.tabSelection === moment.resource.matrix_number[3][moment.resource.matrix_number[0].indexOf(10210)])">Goal</ion-fab-button>
-      <!--create Note-->
-      <ion-fab-button (click)="createCalendarItem($event, '5e4b39cd76ffc96ae6aba323')" color="primary" *ngIf="customSchedule && moment.resource.matrix_number[0].includes(12000) && (!moment.resource.matrix_number[0].includes(20020) || moment.resource.matrix_number[0].includes(20020) && this.tabSelection === moment.resource.matrix_number[3][moment.resource.matrix_number[0].indexOf(12000)])">Note</ion-fab-button>
-    </ion-fab-list>
+      <div *ngFor="let item of moment.resource.matrix_number[0]; trackBy: customTrackBy; index as i" [hidden]="(i > moment.resource.matrix_number[0].indexOf(20020)) && ((!showPreview && moment.resource.matrix_number[3][i] !== tabSelection) || (showPreview && moment.resource.matrix_number[4][i] !== 20021))">
+        <!--create To-Do-->
+        <ion-fab-button *ngIf="item === 10210 && notes_schedule" (click)="createCalendarItem($event, (moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 3) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][3] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][17])" color="primary">{{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-fab-button>
+        <!--create Goal-->
+        <ion-fab-button *ngIf="item === 10210 && (moment.array_boolean.length > 8) && moment.array_boolean[8]" (click)="promptNewGoalName($event)" color="primary">Goal</ion-fab-button>
+        <!--create Note-->
+        <ion-fab-button  *ngIf="item === 12000 && notes_schedule" (click)="createCalendarItem($event, '5e4b39cd76ffc96ae6aba323')" color="primary">Note</ion-fab-button>
+      </div>
+     </ion-fab-list>
   </ion-fab>
-   <!--Join Button for Marketplace Templates to be cloned for a user-->
   <ion-toolbar *ngIf="loadStatus && setupPermissionCompleted && showPreview && (moment && moment.array_boolean && moment.array_boolean.length > 1) && moment.array_boolean[1]"> <!--if shared in marketplace as a template and non-participanting-->
     <ion-button expand="block" shape="round" (click)="cloneActivity($event)" color="primary">Join</ion-button>
   </ion-toolbar>
