improve logic where onboarding modal is not shown if it is not activated when joining an Activity

--- a/src/app/pages/feature/success-popover/success-popover.page.html
+++ b/src/app/pages/feature/success-popover/success-popover.page.html
@@ -9,6 +9,6 @@
     <img src="/assets/img/success-popover.svg" />
     <h3>WELL DONE</h3>
     <p>You've successfully joined this plan.</p>
-    <ion-button>Got it</ion-button>
+    <ion-button (click)="close()" id="close-button">Got it</ion-button>
   </div>
 </ion-content>
