--- a/src/app/pages/feature/success-popover/success-popover.page.html
+++ b/src/app/pages/feature/success-popover/success-popover.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <div style="text-align: center;">
+  <div class="success-container">
     <img src="/assets/img/success-popover.svg" />
     <h3>WELL DONE</h3>
     <p>You've successfully joined this plan.</p>
