show loading animation when joining and leaving an Activity

--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -42,6 +42,10 @@ app-showfeature {
     cursor: default;
   }
 
+  ion-spinner-grid {
+    z-index: 15;
+  }
+
   #permissionBar {
     position: absolute;
     top: 0;
