improve sign in textarea width

--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -33,7 +33,7 @@
                 </ion-segment-button>
               </ion-segment>
               <ion-card *ngIf="loginMode === 'email'">
-                <input id="email" class="email ion-input" type="text" formControlName="email" placeholder="Email" inputmode="email" autocomplete="username" />
+                <input id="email" class="register-email ion-input" type="text" formControlName="email" placeholder="Email" inputmode="email" autocomplete="username" />
               </ion-card>
               <ion-card *ngIf="loginMode === 'mobile'">
                 <ion-label hidden>Calling Code</ion-label>
